--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -88,21 +88,23 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
     }
 
-   @*  <link rel="stylesheet" href="~/css/mobile-navbar-v9.css" /> *@
+    @*  <link rel="stylesheet" href="~/css/mobile-navbar-v9.css" /> *@
 
 
-  
+
 
     <link rel="stylesheet" href="~/css/styles-complete.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/notifications.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/multi-select.css" asp-append-version="true" />
     <!-- Kurdish Language Support -->
     <link rel="stylesheet" href="~/css/kurdish-support.css" asp-append-version="true" />
+    <!-- Enhanced Responsive Design -->
+    <link rel="stylesheet" href="~/css/enhanced-responsive.css" asp-append-version="true" />
     <!-- ملف CSS الموحد للقوائم - يجب أن يكون آخر ملف -->
     <link rel="stylesheet" href="~/css/unified-dropdown-fixed.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/mobile-navbar-complete-fix.css" asp-append-version="true" />
 
- @*    @await RenderSectionAsync("Styles", required: false) *@
+    @*    @await RenderSectionAsync("Styles", required: false) *@
 </head>
 
 <body>
@@ -660,9 +662,11 @@
     <script src="~/js/multi-select.js" asp-append-version="true"></script>
     <script src="~/js/site-unified.js" asp-append-version="true"></script>
     <script src="~/js/notification-manager.js" asp-append-version="true"></script>
+    <!-- Enhanced Interactions -->
+    <script src="~/js/enhanced-interactions.js" asp-append-version="true"></script>
     <!-- ملف JavaScript الموحد للتنقل - يجب أن يكون آخر ملف -->
     <script src="~/js/unified-nav-v9.js"></script>
-@*     <script src="~/js/unified-nav.js" asp-append-version="true"></script> *@
+    @*     <script src="~/js/unified-nav.js" asp-append-version="true"></script> *@
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
